# mcp

./: .dockerignore  .gitignore  .semcod-mcp.yaml  CHANGELOG.md  Makefile  README.md  REFACTORING_PLAN.md  STATUS.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  docker-compose.prod.yml  docker-compose.yml  goal.yaml  index.html  planfile.yaml  project.sh  pyproject.toml
.cursor/rules/: semcod-mcp.mdc
.mcp/: refactor-plan.json  refactor-summary.md
TODO/: 1.md  2.md  3.md
ansible/: e2e-docker-stack.yml  e2e-gh2mcp.yml  e2e-github-qa.yml  e2e-tools.yml  test-github-integration.yml
dashboard/: Dockerfile  index.html  server.py
docs/: CHAT_PLAYBOOKS.md  CURSOR_MCP_WORKFLOW.md  ENV2MCP.md  GATEWAY_MODULE_SPLIT.md  IDE_AND_AGENT_INTEGRATION.md  LINKED_EXAMPLES.md  PRODUCT.md  README.md  SEMCOD_ECOSYSTEM.md  SEMCOD_MCP_CLI.md  USAGE.md  USE_CASES.md
env2mcp/: CHANGELOG.md  README.md  pyproject.toml
env2mcp/env2mcp/: __init__.py  cli.py  config.py  github_cli.py
env2mcp/tests/: test_env2mcp.py
examples/integrations/: README.md  continue-config.snippet.json
gh2mcp/: CHANGELOG.md  Dockerfile  README.md  goal.yaml  pyproject.toml
gh2mcp/gh2mcp/: __init__.py  cli.py  gh_repo_queries.py  server.py  sync.py
gh2mcp/tests/: test_gh2mcp.py
git2mcp/: .gitignore  CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  __init__.py  app.doql.less  client.py  planfile.yaml  proxy.py  pyproject.toml
git2mcp/examples/: 01_sync_and_commit.py  02_fragment_sync_to_skills.py  03_agent_git2mcp.py  04_dry_run_vs_execute.py  05_local_iterate.py  README.md
git2mcp/git2mcp/: __init__.py  client.py  proxy.py
git2mcp/project/: README.md  analysis.toon.yaml  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt
git2mcp/testql-scenarios/: generated-from-pytests.testql.toon.yaml
git2mcp/tests/: test_git2mcp.py
llm-agent/: Dockerfile  agent.py  agent_git2mcp.py  agent_standalone.py  requirements.txt
llm-agent/tests/: test_llm_agent.py
mcp-docs/: Dockerfile  requirements.txt  server.py
mcp-docs/tests/: test_mcp_docs.py
mcp-gateway/: Dockerfile  chat_workflow_handlers.py  dispatch_refactor.py  gateway_chat.py  gateway_config.py  gateway_dispatch.py  gateway_gh2mcp.py  gateway_github.py  gateway_github_nlp.py  gateway_jobs.py  gateway_models.py  gateway_prompt.py  gateway_render.py  gateway_skills.py  gateway_tenants.py  render_refactor_actions.py  render_system_actions.py  render_tools.py  requirements.txt  server.py  test_gateway_token_command.py  test_github_qa.py  test_tool_intent.py  worker.py
mcp-gateway/tenants/: default.yaml
mcp-gateway/tests/: test_mcp_gateway.py
mcp-git-proxy/: Dockerfile  requirements.txt  server.py
mcp-git-proxy/tests/: test_mcp_git_proxy.py
mcp-skills/: Dockerfile  analysis_recommendations.py  code_analysis.py  http_models.py  mcp_parse.py  redsl_runner.py  requirements.txt  server.py  test_code_analysis.py  test_tools_run.py  tool_common.py  tool_exec.py  tool_materialize.py  tool_run.py  tools_registry.py
mcp-skills/tests/: test_mcp_skills.py
mcp-webui/: Dockerfile  requirements.txt  server.py
mcp-webui/templates/: base.html  diff.html  github.html  index.html  playground.html  repos.html  skills.html
mcp-webui/tests/: test_mcp_webui.py
output/: test_another-project_analysis.json  test_sample-project_analysis.json
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
repos/test/another-project/: app.py
repos/test/sample-project/: main.py  module_1.py  module_2.py  module_3.py  module_4.py  module_5.py
scripts/: deploy.sh  generate_demo_repos.sh  refactor-last-repo.sh  test.sh
semcod_mcp/: __init__.py  analyze.py  cli.py  deinit_cmd.py  doctor.py  init_cmd.py  merge.py  paths.py  templates.py  validate.py
tests/: __init__.py  test_analyze.py  test_deinit.py  test_init.py  test_merge.py
