[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git2mcp"
version = "0.1.8"
description = "Git proxy and MCP package sync toolkit"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.24.0",
  "GitPython>=3.1.43",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.104.0",
  "pytest>=7.4.0",
  "goal>=2.1.0",
  "costs>=0.1.20",
  "pfix>=0.1.60",
]

[tool.setuptools]
packages = ["git2mcp"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
